--- a/frontend-cicarus/.env
+++ b/frontend-cicarus/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=https://172.203.234.78:443
+VITE_API_URL=https://cicarusbank.app:8765
 ; VITE_API_URL=http://localhost:8765
 ; VITE_API_URL=
 
