Atualização da variável de ambiente do front.

--- a/frontend-cicarus/.env
+++ b/frontend-cicarus/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=https://cicarusbank.app:8765
+VITE_API_URL=https://cicarusbank.app
 ; VITE_API_URL=http://localhost:8765
 ; VITE_API_URL=
 
