--- a/frontend-cicarus/package.json
+++ b/frontend-cicarus/package.json
@@ -32,6 +32,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
     "react-input-mask": "^2.0.4",
     "react-map-gl": "^8.0.4",
     "react-number-format": "^5.4.4",
