--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "prop-types": "^15.8.1"
   }
 }
