--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -41,6 +41,11 @@ springdoc:
     url: /customers/v3/api-docs
   override-server-url: true
 
+logging:
+  level:
+    com.cicarus.customer_service.client.AuthClient: DEBUG
+    feign: DEBUG
+
 #jwt:
 #  secret: hzAS6BikJ_2Ft3fEye-lqwGviIeGbWFRG9mEnNDzQp4=
 #  expiration: 86400000 # 24 horas em ms
