Refactor configuration and SQL files; update authorization token and comment out debug logs

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -71,8 +71,8 @@ spring:
               uri: lb://notification
               predicates:
                 - Path=/notification/**
-              filters:
-                - JwtAuthenticationFilter
+#              filters:
+#                - JwtAuthenticationFilter
 
             - id: card
               uri: lb://card
